# CWPack

./: CMakeLists.txt
example/: CMakeLists.txt  item.cpp
goodies/: CMakeLists.txt
goodies/basic-contexts/: CMakeLists.txt  basic_contexts.cpp  basic_contexts.h
goodies/utils/: CMakeLists.txt  cwpack_utils.cpp  cwpack_utils.h
src/: cwpack.cpp  cwpack.hpp  cwpack_internals.hpp
test/: CMakeLists.txt  cwpack_module_test.cpp
